Fixed whitespace issue with contact page, added height: 100vh to main element

--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer utilities {
-    .main {
-        height: 100%
-    }
+    body > #root > div {
+        height: 100vh;
+      }
 }
